[gd_scene load_steps=5 format=2]

[ext_resource path="res://lightning/lightning.tscn" type="PackedScene" id=1]
[ext_resource path="res://demo/demo.gd" type="Script" id=2]
[ext_resource path="res://shaders/glow.shader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/radius = 4.0
shader_param/step_size = 1.0
shader_param/sd = 12.0
shader_param/additive_strength = 10.0
shader_param/center_strength = 1.0

[node name="Demo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lightning" parent="." instance=ExtResource( 1 )]
MAX_BRANCH_CHANCE = 0.3

[node name="ShaderLayer" type="CanvasLayer" parent="."]

[node name="ScreenShader" type="ColorRect" parent="ShaderLayer"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="SimulationButtons" type="HBoxContainer" parent="UILayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -84.0
margin_top = -109.0
margin_right = 84.0
margin_bottom = -69.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SingleStrikeButton" type="Button" parent="UILayer/SimulationButtons"]
margin_right = 90.0
margin_bottom = 40.0
text = "Single strike"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartStopButton" type="Button" parent="UILayer/SimulationButtons"]
margin_left = 94.0
margin_right = 168.0
margin_bottom = 40.0
toggle_mode = true
text = "Start/Stop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPSCounter" type="Label" parent="UILayer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 41.0
margin_bottom = 15.0
text = "FPS: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="VBoxContainer" parent="UILayer"]
margin_left = 30.0
margin_top = 265.0
margin_right = 331.0
margin_bottom = 315.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UILayer/Instructions"]
margin_right = 301.0
margin_bottom = 14.0
text = "Set start position: LMB"

[node name="Label2" type="Label" parent="UILayer/Instructions"]
margin_top = 18.0
margin_right = 301.0
margin_bottom = 32.0
text = "Set end position: RMB"

[node name="Label3" type="Label" parent="UILayer/Instructions"]
margin_top = 36.0
margin_right = 301.0
margin_bottom = 50.0
text = "Enable point: MMB"

[node name="Settings" type="VBoxContainer" parent="UILayer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -20.0
margin_right = 331.0
margin_bottom = 36.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeBetweenStrikes" type="HBoxContainer" parent="UILayer/Settings"]
margin_top = 27.0
margin_right = 301.0
margin_bottom = 43.0

[node name="Title" type="Label" parent="UILayer/Settings/TimeBetweenStrikes"]
margin_top = 1.0
margin_right = 165.0
margin_bottom = 15.0
text = "Time between strikes (s): "

[node name="TimeSlider" type="HSlider" parent="UILayer/Settings/TimeBetweenStrikes"]
margin_left = 169.0
margin_right = 269.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
min_value = 0.01
max_value = 0.1
step = 0.01
value = 0.05
scrollable = false
ticks_on_borders = true

[node name="Number" type="Label" parent="UILayer/Settings/TimeBetweenStrikes"]
margin_left = 273.0
margin_top = 1.0
margin_right = 301.0
margin_bottom = 15.0
text = "(0.1)"

[node name="BranchChance" type="HBoxContainer" parent="UILayer/Settings"]
margin_top = 47.0
margin_right = 301.0
margin_bottom = 63.0

[node name="Title" type="Label" parent="UILayer/Settings/BranchChance"]
margin_top = 1.0
margin_right = 105.0
margin_bottom = 15.0
text = "Branch chance:  "

[node name="BranchChanceSlider" type="HSlider" parent="UILayer/Settings/BranchChance"]
margin_left = 109.0
margin_right = 209.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
max_value = 0.5
step = 0.01
value = 0.25
scrollable = false
ticks_on_borders = true

[node name="Number" type="Label" parent="UILayer/Settings/BranchChance"]
margin_left = 213.0
margin_top = 1.0
margin_right = 249.0
margin_bottom = 15.0
text = "(0.01)"

[node name="PathNotFound" type="Label" parent="UILayer"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -152.0
margin_bottom = -138.0
text = "ERROR: Valid path not found"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="path_not_found" from="Lightning" to="." method="_on_Lightning_path_not_found"]
[connection signal="strike_completed" from="Lightning" to="." method="_on_Lightning_strike_completed"]
[connection signal="pressed" from="UILayer/SimulationButtons/SingleStrikeButton" to="." method="_on_SingleStrikeButton_pressed"]
[connection signal="pressed" from="UILayer/SimulationButtons/StartStopButton" to="." method="_on_StartStopButton_pressed"]
[connection signal="value_changed" from="UILayer/Settings/TimeBetweenStrikes/TimeSlider" to="." method="_on_TimeBetweenStrikesSlider_value_changed"]
[connection signal="value_changed" from="UILayer/Settings/BranchChance/BranchChanceSlider" to="." method="_on_BranchChanceSlider_value_changed"]
